--- a/index3.html
+++ b/index3.html
@@ -25,6 +25,7 @@
             'url8.html',
             'url9.html',
             'url10.html',
+            'url11.html',
         ];
 
         var rows = maze.length;
