--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,6 @@
         var maze = [
             [0, 0, 0, 0],
             [0, 0, 0, 0],
-            [0, 0, 0, 0],
             [0, 0, 0, 0]
         ];
 
@@ -27,6 +26,7 @@
             'url9.html',
             'url10.html',
             'url11.html',
+            'url12.html',
         ];
 
         var rows = maze.length;
