--- a/index3.html
+++ b/index3.html
@@ -57,7 +57,7 @@
         var captureBack = true;
 
         // Set the background color for the board to white
-        board.style.backgroundColor = "white";
+        //board.style.backgroundColor = "white";
         board.style.border = "1px solid white";
         board.style.height = ((rows * blockSize) + ((rows - 1) * spacing)) + "px"; // Adjust height
         board.style.width = ((cols * blockSize) + ((cols - 1) * spacing)) + "px"; // Adjust width
