--- a/index5.html
+++ b/index5.html
@@ -137,7 +137,7 @@
                 case 39:
                     move("right");
                     break;
-                case 'Enter': // Enter key
+                case 32: // spacebar
                     handleDoubleClick(); // Call the same function as for double-click
                     break;
             }
