--- a/index5.html
+++ b/index5.html
@@ -137,7 +137,7 @@
                 case 39:
                     move("right");
                     break;
-                case 7: // enter key on virtual remote. 
+                case 'select': // enter key on virtual remote. 
                     handleDoubleClick(); // Call the same function as for double-click
                     break;
             }
