--- a/index6.html
+++ b/index6.html
@@ -111,7 +111,7 @@
         // Function to handle double-click events on open squares
         function handleDoubleClick(event) {
             var currentSquareValue = maze[playerPos.y][playerPos.x];
-            if (currentSquareValue === 0) {
+            if (currentSquareValue === 0 | event.keyCode === 13) {
                 // Redirect to the corresponding URL for the open square
                 var squareIndex = playerPos.x + playerPos.y * cols;
                 if (squareIndex < squareUrls.length) {
@@ -121,11 +121,11 @@
             }
         }
         
-        window.addEventListener("keydown", function(event) {
-            if (event.keyCode === 13) {
-                handleDoubleClick();
-            }
-        });  
+        //window.addEventListener("keydown", function(event) {
+          //  if (event.keyCode === 13) {
+                //handleDoubleClick();
+        //    }
+      //  });  
 
         // Add a click event listener to the board
         board.addEventListener("click", handleDoubleClick);
